--- a/index.html
+++ b/index.html
@@ -49,13 +49,108 @@
     <div class="main" id="about">
         <div class="main__container">
             <div class="main__img__container">
-                <div class="main__img__card"><i class></i></div>
+                <div class="main__img__card"><i class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
             <h1>What Do I Do?</h1>
             <h2>Front End and Full Stck Development</h2>
         </div>
+        </div>
+    </div>
+
+    <!--Services Section-->
+    <div class="services" id="services">
+        <h1>My Services</h1>
+        <div class="services-wrapper">
+            <div class="services-card">
+                <h2>HTML</h2>
+                <p>latest html 5 technology and css</p>
+                <div class="services-btn"><button>Get started</button></div>
             </div>
+            <div class="services-card">
+                <h2>JavaScript</h2>
+                <p>Beautiful animations with .Js</p>
+                <div class="services-btn"><button>Get started</button></div>
+            </div>
+            <div class="services-card">
+                <h2>CSS</h2>
+                <p>styling beautiful websites</p>
+                <div class="services-btn"><button>Get started</button></div>
+            </div>
+            <div class="services-card">
+                <h2>Custom Web Design</h2>
+                <p>clean web designs</p>
+                <div class="services-btn"><button>Get started</button></div>
+            </div>
+        </div>
+    </div>
+
+    <!--Features Section-->
+    <div class="main" id="contact-me">
+        <div class="main__container">
+            <div class="main__content">
+            <h1>Interested in Having a Conversation?</h1>
+            <h2>Feel free to reach out and converse</h2>
+            <p>see what we can do better</p>
+        </div>
+            <div class="main__img__container">
+                <div class="main__img__card"><i class="fas fa-users"></i></div>
+        </div>
+        </div>
+    </div>
+
+    <!--Footer section-->
+    <div class="footer-container">
+        <div class="footer-links">
+            <div class="footer-link-wrapper">
+            <div class="footer-link-items">
+                <h2>About Me</h2>
+                <a href="/contact-me">How I work</a>
+                <a href="/contact-me">Testimonials</a>
+                <a href="/contact-me">Careers</a>
+                <a href="/contact-me">Terms of Service</a>
+            </div>
+            <div class="footer-link-items">
+                <h2>About Me</h2>
+                <a href="/contact-me">How I work</a>
+                <a href="/contact-me">Testimonials</a>
+                <a href="/contact-me">Careers</a>
+                <a href="/contact-me">Terms of Service</a>
+            </div>
+            </div>
+            <div class="footer-link-wrapper">
+            <div class="footer-link-items">
+                <h2>About Me</h2>
+                <a href="/contact-me">How I work</a>
+                <a href="/contact-me">Testimonials</a>
+                <a href="/contact-me">Careers</a>
+                <a href="/contact-me">Terms of Service</a>
+            </div>
+            <div class="footer-link-items">
+                <h2>About Me</h2>
+                <a href="/contact-me">How I work</a>
+                <a href="/contact-me">Testimonials</a>
+                <a href="/contact-me">Careers</a>
+                <a href="/contact-me">Terms of Service</a>
+            </div>
+            </div>
+        </div>
+        <section class="social-media">
+            <div class="social-media-wrap">
+                <div class="footer-logo">
+                    <a href="/" id="footer-logo">PORTFOLIO</a>
+                </div>
+                <div class="social-icons">
+                    <a href="/" id="social-icon-link" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="/" id="social-icon-link" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="/" id="social-icon-link" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/TonySaka" id="social-icon-link" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+                <div class ="website-rights"
+                <p> ©TP 2022. All rights reserved</p>
+            </div> 
+            </div>
+        </section>
     </div>
     <script src="script.js"></script>  
 </body>
