--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfoliowebsite</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e144ba2e22.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"
 </head>
 <body>
+
     <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar__container">
@@ -32,10 +34,10 @@
             <li class="navbar__btn">
                 <a href="#contact" class="button" id="contact-page">Contact me</a>
             </li>
-            
             </ul>
         </div>
     </nav>
+
     <!--Hero Section-->
     <div class="hero" id="home">
         <div class="hero__container">
@@ -94,7 +96,7 @@
             <p>see what we can do better</p>
         </div>
             <div class="main__img__container">
-                <div class="main__img__card"><i class="fas fa-users"></i></div>
+            <div class="main__img__card"><i class="fas fa-users"></i></div>
         </div>
         </div>
     </div>
